# ai-music-studio

./: .env.template  .gitignore  LICENSE  README.md  docker-compose.yml
acestep/: Dockerfile  entrypoint.sh
acestep/src/: proxy.py
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/core/: config.py  db.py  exceptions.py  storage.py
backend/src/models/: album.py  progress.py
backend/src/prompts/: album_planner.md
backend/src/routes/: album.py  health.py
backend/src/services/: album_planner.py  cover.py  export.py  music.py
backend/src/tools/: acestep.py  flux.py  ollama.py
backend/tests/: __init__.py  test_acestep_prompt_limits_unittest.py  test_album_planner_unittest.py  test_db_and_exports_unittest.py
flux/: Dockerfile
flux/src/: main.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/features/: AlbumCreator.tsx  AlbumResult.tsx  GenerationProgress.tsx  PlanReview.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  MainContent.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  ProgressBar.tsx  Slider.tsx  Spinner.tsx  ThemeToggle.tsx
frontend/src/hooks/: useGenerationStream.ts
frontend/src/services/: album.service.ts
frontend/src/stores/: album.store.ts  navigation.store.ts
frontend/src/types/: album.ts
ollama/: Dockerfile  entrypoint.sh
