[project]
name = "backend"
version = "0.1.0"
description = "AI Music Studio — FastAPI orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi[standard]>=0.132.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
